--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "phunk-forum-vue",
+  "name": "decent-forum-ui-vue",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,9 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/node": "12.7.8",
+    "arweave": "1.4.1",
     "core-js": "^2.6.5",
+    "graphql-request": "1.8.2",
     "register-service-worker": "^1.6.2",
+    "remixicon": "2.0.0",
     "vue": "^2.6.10",
+    "vue-burger-menu": "2.0.2",
     "vue-router": "^3.0.3"
   },
   "devDependencies": {
@@ -32,7 +37,6 @@
     "last 2 versions"
   ],
   "gitHooks": {
-    "pre-commit": "lint-staged"
   },
   "lint-staged": {
     "*.ts": [
