--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "vue": "^2.6.10",
     "vue-burger-menu": "2.0.2",
     "vue-moment": "4.0.0",
-    "vue-router": "^3.0.3"
+    "vue-router": "3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
